<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ui.MainActivity">

    <LinearLayout
        android:id="@+id/linear_menu"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@color/purple_primary"
        android:orientation="horizontal">

        <ImageView
            android:id="@+id/image_all_inclusive"
            android:layout_width="0dp"
            android:layout_height="64dp"
            android:layout_weight="1"
            android:padding="16dp"
            android:src="@drawable/ic_baseline_all_inclusive_24"
            app:tint="@color/white" />

        <ImageView
            android:id="@+id/image_happy"
            android:layout_width="0dp"
            android:layout_height="64dp"
            android:layout_weight="1"
            android:padding="16dp"
            android:src="@drawable/ic_baseline_emoji_emotions_24"
            app:tint="@color/purple_dark" />

        <ImageView
            android:id="@+id/image_sunny"
            android:layout_width="0dp"
            android:layout_height="64dp"
            android:layout_weight="1"
            android:padding="16dp"
            android:src="@drawable/ic_baseline_wb_sunny_24"
            app:tint="@color/purple_dark"
            />

    </LinearLayout>

    <TextView
        android:id="@+id/text_hello"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/linear_menu"
        android:layout_marginTop="16dp"
        android:gravity="center"
        android:text="@string/hello"
        android:textColor="@color/black"
        android:textSize="14sp" />


    <TextView
        android:id="@+id/text_word"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_centerVertical="true"
        android:gravity="center"
        android:paddingHorizontal="15dp"
        android:text="@string/default_word"
        android:textColor="@color/black"
        android:textSize="16sp"
        />

    <View
        android:layout_width="128dp"
        android:layout_height="5dp"
        android:layout_below="@+id/text_word"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="16dp"
        android:background="@color/black"
        android:elevation="2dp"
        android:backgroundTint="@color/purple_primary" />

    <Button
        android:id="@+id/button_new_word"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_centerHorizontal="true"
        android:layout_margin="16dp"
        android:backgroundTint="@color/purple_primary"
        android:padding="16dp"
        android:text="@string/new_word"
        android:textColor="@color/white" />


</RelativeLayout>